Fix package name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "teppokoivula/MarkupMenu",
+    "name": "teppokoivula/markup-menu",
     "type": "pw-module",
     "description": "MarkupMenu is a ProcessWire CMS/CMF module for generating menu markup.",
     "keywords": [
